@@ -32,6 +32,12 @@ def main(regrtest_args):
             ]
     # Allow user-specified interpreter options to override our defaults.
     args.extend(test.support.args_from_interpreter_flags())
+
+    # Workaround for issue #20355
+    os.environ.pop("PYTHONWARNINGS", None)
+    # Workaround for issue #20361
+    args.extend(['-W', 'error::BytesWarning'])
+
     args.extend(['-m', 'test',    # Run the test suite
                  '-r',            # Randomize test order
                  '-w',            # Re-run failed tests in verbose mode
